@@ -1,3 +1,8 @@
+4/2/2005:	v3.0.3
+	- use 8x16 console font (8x14 does not always exist)
+	- avoid overlap with bootloader memory usage
+	- fixed memory addressing probem
+
 1/2/2005:	v3.0.2
 	- workaround to avoid memory corruption
 	- added experimental mouse code (for testing)
